# soil-health

./: GoogleService-Info.plist  README.md  SOFTWARE_REQUIREMENTS_SPECIFICATION.md  firebase-realtime-database.rules.json  firestore.rules  google-services.json  npk-sensor-data.json  pyproject.toml
arduino/soil_health_monitor/: soil_health_monitor.ino
docs/: hardware_frontend_contract.md
esp32/: firebase_esp32.ino
firebase/: rtdb.rules.json
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
src/soil_health/: __init__.py  main.py
src/soil_health/api/: app.py
src/soil_health/domain/: models.py  repository.py
tests/: test_api.py
users/: firebase-client.js
